[gd_scene load_steps=9 format=3 uid="uid://5tp8jugm2nga"]

[ext_resource type="Script" path="res://scripts/game_ui.gd" id="1_lgdev"]
[ext_resource type="FontFile" uid="uid://yaxi3v0erdfl" path="res://assets/fonts/munro.ttf" id="1_o1ps0"]
[ext_resource type="Script" path="res://scripts/hud.gd" id="1_wclo8"]
[ext_resource type="Texture2D" uid="uid://b4rhr2r82wteo" path="res://assets/gui/panel-timer.png" id="3_hxtl0"]
[ext_resource type="Texture2D" uid="uid://bh3ydq1dwq5eq" path="res://assets/gui/panel-gems.png" id="4_hfr61"]
[ext_resource type="Texture2D" uid="uid://dj4lse363ogfx" path="res://assets/gui/panel-menu.png" id="5_r7vlg"]

[sub_resource type="LabelSettings" id="LabelSettings_jfnh8"]
font = ExtResource("1_o1ps0")
font_size = 10

[sub_resource type="LabelSettings" id="LabelSettings_013u4"]
font = ExtResource("1_o1ps0")
font_size = 20

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_lgdev")

[node name="HUD" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wclo8")

[node name="TimerPanel" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 65.0
offset_bottom = 33.0
texture = ExtResource("3_hxtl0")
stretch_mode = 2

[node name="TimerLabel" type="Label" parent="HUD/TimerPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -18.0
offset_top = -10.0
offset_right = 9.0
offset_bottom = 3.0
grow_horizontal = 2
grow_vertical = 2
text = "999.99"
label_settings = SubResource("LabelSettings_jfnh8")

[node name="GemsPanel" type="TextureRect" parent="HUD"]
layout_mode = 0
offset_left = 415.0
offset_top = 1.0
offset_right = 479.0
offset_bottom = 33.0
texture = ExtResource("4_hfr61")
stretch_mode = 2

[node name="GemsAmountLabel" type="Label" parent="HUD/GemsPanel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65625
anchor_top = 0.390625
anchor_right = 0.65625
anchor_bottom = 0.390625
offset_left = -7.0
offset_top = -6.5
offset_right = 13.0
offset_bottom = 6.5
grow_horizontal = 2
grow_vertical = 2
text = "9999"
label_settings = SubResource("LabelSettings_jfnh8")

[node name="WinScreen" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -64.0
offset_right = 80.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2

[node name="WinPanel" type="TextureRect" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -80.0
offset_top = -64.0
offset_right = 80.0
offset_bottom = 64.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("5_r7vlg")
stretch_mode = 2

[node name="WinLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -64.5
offset_top = 9.0
offset_right = 64.5
offset_bottom = 33.0
grow_horizontal = 2
text = "LEVEL COMPLETED"
label_settings = SubResource("LabelSettings_013u4")

[node name="TimerScoreLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -28.0
offset_right = -10.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
text = "TIMER SCORE"
label_settings = SubResource("LabelSettings_jfnh8")
horizontal_alignment = 2

[node name="TimerScoreValueLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -28.0
offset_right = 42.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 2
text = "999999"
label_settings = SubResource("LabelSettings_jfnh8")

[node name="GemsScoreLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -11.0
offset_right = -10.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
text = "GEMS SCORE"
label_settings = SubResource("LabelSettings_jfnh8")
horizontal_alignment = 2

[node name="GemsScoreValueLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = -11.0
offset_right = 42.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
text = "999999"
label_settings = SubResource("LabelSettings_jfnh8")

[node name="SeparatorLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_right = 64.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "---------------------------------"
label_settings = SubResource("LabelSettings_jfnh8")

[node name="TotalScoreLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = 13.0
offset_right = -10.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "TOTAL SCORE"
label_settings = SubResource("LabelSettings_jfnh8")
horizontal_alignment = 2

[node name="TotalScoreValueLabel" type="Label" parent="WinScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 12.0
offset_top = 13.0
offset_right = 42.0
offset_bottom = 26.0
grow_horizontal = 2
grow_vertical = 2
text = "999999"
label_settings = SubResource("LabelSettings_jfnh8")

[node name="NextButton" type="Button" parent="WinScreen"]
layout_mode = 0
offset_left = 90.0
offset_top = 97.0
offset_right = 150.0
offset_bottom = 118.0
theme_override_fonts/font = ExtResource("1_o1ps0")
theme_override_font_sizes/font_size = 10
text = "NEXT"

[node name="RestartButton" type="Button" parent="WinScreen"]
layout_mode = 0
offset_left = 10.0
offset_top = 97.0
offset_right = 70.0
offset_bottom = 118.0
theme_override_fonts/font = ExtResource("1_o1ps0")
theme_override_font_sizes/font_size = 10
text = "RESTART"

[connection signal="pressed" from="WinScreen/NextButton" to="." method="_on_next_button_pressed"]
[connection signal="pressed" from="WinScreen/RestartButton" to="." method="_on_restart_button_pressed"]
